# Checkers

./: CMakeLists.txt
checkers/: board.cpp  board.hpp  checkers.cpp  checkers.hpp  game.hpp  main.cpp  minimax.cpp  minimax.hpp
tests/: test.cpp  test_board.cpp  test_checkers.cpp  test_game.cpp
